Add margin-bottom to pagination controls and adjust theme icon styling

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </table>
                 
                 <!-- Pagination Controls -->
-                <div id="paginationControls" style="display: none; justify-content: center; align-items: center; gap: 20px; margin-top: 20px;">
+                <div id="paginationControls" style="display: none; justify-content: center; align-items: center; gap: 20px; margin-top: 20px; margin-bottom: 20px;">
                     <button id="prevBtn" onclick="prevPage()" class="btn btn-primary" style="padding: 8px 20px;">← Previous</button>
                     <span id="pageInfo" style="color: var(--text-light); font-weight: 500;">Page 1 of 1</span>
                     <button id="nextBtn" onclick="nextPage()" class="btn btn-primary" style="padding: 8px 20px;">Next →</button>
